# simple

./: LICENSE  README.md
cmake/: CMakeLists.txt
include/: Coordinate.h  Handle.h  IdentifierConstant.h  Iterator.h  Size.h  Value.h
include/cont/decl/: Allocator.h  ConstIterator.h  ConstLocalIterator.h  ConstPointer.h  ConstReference.h  ConstReverseIterator.h  Container.h  Difference.h  Hasher.h  Iterator.h  Key.h  KeyCompare.h  KeyEqual.h  LocalIterator.h  Mapped.h  Pointer.h  Reference.h  ReverseIterator.h  Size.h  Value.h  ValueCompare.h
include/cont/handle/: Assign.h  At.h  Back.h  Begin.h  Bucket.h  BucketCount.h  BucketSize.h  Capacity.h  Clear.h  ConstBegin.h  ConstEnd.h  ConstReverseBegin.h  ConstReverseEnd.h  Count.h  Data.h  Emplace.h  EmplaceBack.h  EmplaceFront.h  EmplaceHint.h  Empty.h  End.h  EqualRange.h  Erase.h  Find.h  Front.h  GetAllocator.h  HashFunction.h  Insert.h  KeyComparison.h  KeyEquivalence.h  LoadFactor.h  LowerBound.h  MaximumBucketCount.h  MaximumLoadFactor.h  MaximumSize.h  Merge.h  PopBack.h  PopFront.h  PushBack.h  PushFront.h  (+16 more)
include/coord/: Cartesian.h  Polar.h  X.h  XY.h  XYZ.h
include/id_const/: HasDeclaration.h  IsBase.h  Validation.h
include/iter/: Bidirectional.h  Forward.h  Input.h  Output.h  RandomAccess.h
include/type/: And.h  Or.h  Switch.h  Xor.h
